# RotmanPythonForBusiness_Module4

./: README.md  module4_machine_learning.ipynb  pyproject.toml
data/: market_data.csv  stock_characteristics.csv  stock_prices.csv
